<resources>
    <string name="app_name">PlaylistManager</string>
    <string name="button_addSong">Add Song</string>
    <string name="songTitle">Title</string>
    <string name="songArtist">Artist</string>
    <string name="songDuration">Duration</string>
    <string name="songReleaseYear">Year it was released</string>
    <string name="songWonAward">Did it win an award?</string>
    <string name="menu_addPlaylist">Add</string>
    <string name="playlistName">Name</string>
    <string name="menu_cancelPlaylist">Cancel</string>
    <string name="select_playlist_image">Select playlist image</string>
    <string name="button_location">Set Song Purchase Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="splash_screen_image">Splash Screen Image</string>
    <string name="not_a_user_register_here">Not a user?...Register Here!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="award_won">Award Won</string>
    <string name="todo">TODO</string>
    <string name="add_image">Add Image</string>
    <string name="enter_a_name_for_your_playlist">Enter a name for your playlist:</string>
    <string name="register">Register</string>
    <string name="artist">Artist</string>
    <string name="textview">TextView</string>
    <string name="release_year">Release Year</string>
    <string name="duration">Duration</string>
    <string name="won_award">Won Award?</string>
    <string name="title">Title</string>
    <string name="main_menu">Main Menu</string>
</resources>